Add support for external resources and enhance sample document handling for testing and builds
- Implement external filesystem resource loading for tests using `TEST_DOCUMENTS` and `SAMPLE_DOC_TYPES` environment variables.
- Enhance `start-module-parser.sh` to conditionally clone and configure sample documents repository.
- Update tests to prefer external resources when available.
- Introduce GitHub Actions workflow (`.github/workflows/build-and-publish.yml`) for build, test, and deployment processes.
- Update script dependencies to include Git.
- Refactor resource-related utilities for better flexibility and integration with external directories.